cc_library(
    name = "common",
    deps = [
        "@boost//:boost",
        "@cctz//:cctz",
        "@fmt//:fmt",
        "@poco//:Net",
        "@poco//:Util",

        "//contrib/cityhash102:cityhash",
    ],

    # FIXME: put global config options here for now.
    defines = [
        "WITH_COVERAGE=0",
    ],

    srcs = [
        "argsToConfig.cpp",
        "argsToConfig.h",
        "arithmeticOverflow.h",
        "constexpr_helpers.h",
        "coverage.cpp",
        "coverage.h",
        "DateLUT.cpp",
        "DateLUT.h",
        "DateLUTImpl.cpp",
        "DateLUTImpl.h",
        "DayNum.h",
        "defines.h",
        "demangle.cpp",
        "demangle.h",
        "errnoToString.cpp",
        "errnoToString.h",
        "ErrorHandlers.h",
        "find_symbols.h",
        "getFQDNOrHostName.cpp",
        "getFQDNOrHostName.h",
        "getMemoryAmount.cpp",
        "getMemoryAmount.h",
        "getThreadId.cpp",
        "getThreadId.h",
        "iostream_debug_helpers.h",
        "itoa.h",
        "JSON.cpp",
        "JSON.h",
        "LineReader.cpp",
        "LineReader.h",
        "LocalDate.h",
        "LocalDateTime.h",
        "logger_useful.h",
        "memory.h",
        "mremap.cpp",
        "mremap.h",
        "phdr_cache.cpp",
        "phdr_cache.h",
        "preciseExp10.cpp",
        "preciseExp10.h",
        # "ReadlineLineReader.cpp",
        # "ReadlineLineReader.h",
        # "ReplxxLineReader.cpp",
        # "ReplxxLineReader.h",
        "setTerminalEcho.cpp",
        "setTerminalEcho.h",
        "shift10.cpp",
        "shift10.h",
        "SimpleCache.h",
        "sleep.cpp",
        "sleep.h",
        "StringRef.h",
        "strong_typedef.h",
        "terminalColors.cpp",
        "terminalColors.h",
        "time.h",
        "types.h",
        "unaligned.h",
    ],

    visibility = [
        "//base:__subpackages__",
        "//src:__subpackages__",
    ],
)
